    any/local-libgcc-compat-{main,ports}.diff.
  * Add sparc/local-fork.diff (use fork.c instead of fork.S).
  * Add sparc/local-sysdep.diff (pull in __syscall_error routine when 
    building with linuxthreads).
  * debian/sysdeps/mips(el).mk: disable TLS (as on 2.3.6).
  * Add any/local-__thread.diff (make glibc buildable without __thread support)
    from Michael Bank.  (Closes: #361064)

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 28 May 2006 03:28:14 +0200

glibc (2.3.6-11) UNRELEASED; urgency=low

  [ Aurelien Jarno ]
  * debian/rules/build.mk: don't remove ld.so from udeb packages.
  * debian/rules: move udeb_add-ons to debian/sysdeps/{kfreebsd,linux}.mk.
  * M32R support:  (Closes: #366962)
    - debian/rules.d/control.mk: add m32r.
    - Add debian/sysdeps/m32r.mk.
    - Add debian/patches/any/cvs-futimes.diff (use fnctl64 if fnctl is no
      available).
    - Add debian/patch/any/local-kernel-features.diff (fix the include path
      for kernel-features.h) so that it could be used from other files.
    - Add debian/patches/any/local-libgcc-static.diff (link with libgcc_s).
    - Add debian/patches/m32r/local-ports-m32r.diff (m32r support).
    - Add debian/patches/m32r/cvs-elf-m32r_rel32.diff (Add R_M32R_REL32 to 
      elf/elf.h).
  * debian/local/manpages/localedef.1: fix a typo.  (Closes: #310477)
  * debian/local/manpages/iconv.1: fix the indentation (Closes: #316148)
  * debian/local/manpages/iconv.1, debian/local/manpages/localedef.1: change
    sarge into etch.
  * debian/sysdeps/kfreebsd.mk: build the udeb package with -Os on
    kfreebsd-i386 and kfreebsd-amd64.
  * debian/sysdeps/*.mk: build the udeb with -Os on amd64, i386, mips and 
    mipsel, powerpc and sparc.
  * debian/sysdeps/arm.mk: set udeb_MIN_KERNEL_SUPPORTED to 2.4.1, as the
    arm build daemons are still running a 2.4 kernel.
  * patches/kfreebsd/local-sysdeps.diff: update to revision 1577 (from
    glibc-bsd).