@@ -1,4 +1,4 @@
-libc_extra_config_options = $(extra_config_options) --without-__thread --disable-sanity-checks
+libc_extra_config_options = $(extra_config_options) --without-tls --disable-sanity-checks
 libc_add-ons = ports linuxthreads $(add-ons)
 
 # udeb Config
