@@ -1,5 +1,5 @@
 libc = libc6.1
-libc_extra_config_options = $(extra_config_options) --without-__thread --disable-sanity-checks
+libc_extra_config_options = $(extra_config_options) --disable-sanity-checks
 
 # NPTL Config
 GLIBC_PASSES += nptl
