@@ -23,7 +23,7 @@ with_headers = --with-headers=$(shell pwd)/debian/include --enable-kernel=$(call
 #udeb_extra_cflags = -Os
 udeb_MIN_KERNEL_SUPPORTED = 2.6.1
 udeb_add-ons = linuxthreads $(add-ons)
-udeb_extra_config_options = $(extra_config_options) --without-__thread --disable-sanity-checks
+udeb_extra_config_options = $(extra_config_options) --disable-sanity-checks
 
 # NPTL Config
 nptl_add-ons = nptl $(add-ons)
